extension/skin/classic/net.css
/* ... */
.loaded .netLoadingIcon {
    display: none;
}

/************************************************************************************************/
/* Timeline */

.netBar {
    position: relative;
    border-right: 50px solid transparent;
}

.netResolvingBar,
.netConnectingBar,
.netBlockingBar,
.netSendingBar,
.netWaitingBar,
.netReceivingBar {
    position: absolute;
    left: 0;
    top: 1px;
    bottom: 1px;
    background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
}

.netBlockingBar {
    background-color: #EBE1D2;
    z-index: 60;
}

.netResolvingBar {
    background-color: #91D2DC;
    z-index: 50;
}

.netConnectingBar {
    background-color: #B9E164;
    z-index: 40;
}

.netSendingBar {
    background-color: #E1826E;
    z-index: 30;
}

.netWaitingBar {
    background-color: #B4A5D2;
    z-index: 20;
    min-width: 1px;
}

.netReceivingBar {
    background-color: #78E17D;
    z-index: 10;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ 
/* Vertical lines - time stamps */

.netPageTimingBar {
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 1px;
    z-index: 70;
    opacity: 0.5;
    display: none;
    margin-bottom:-1px;
}

.netWindowLoadBar {
    background-color: red;
}

.netContentLoadBar {
    background-color: Blue;
}

.netPaintBar {
    background-color: green;
}

.netTimeStampBar {
    background-color: Olive;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ 

.netTimeLabel {
    -moz-box-sizing: padding-box;
    position: absolute;
    top: 1px;
    left: 100%;
    padding-left: 6px;
    color: #808080;
    min-width: 16px;
}

/*
 * Timing info tip is reusing net timeline styles to display the same
 * colors for individual request phases. Notice that the info tip must
 * respect also loaded and fromCache styles that also modify the
 * actual color. These are used both on the same element in case
 * of the tooltip.
 */
.loaded .netReceivingBar,
.loaded.netReceivingBar {
    background: #D7D7D7 -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
    border-color: #D7D7D7;
}

.fromCache .netReceivingBar,
.fromCache.netReceivingBar {
    background: #FAFAFA -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
    border-color: #FAFAFA;
}

.netSummaryRow .netTimeLabel,
.loaded .netTimeLabel {
    background: transparent;
}

/************************************************************************************************/
/* If coming from BF cache (no network activity) */

.netTable .netRow.fromBFCache {
    visibility: collapse;
}

.netTable.showBFCacheResponses .netRow.fromBFCache {
    visibility: visible;
}

.netRow.fromBFCache .netLabel,
.netRow.fromBFCache .netBlockingBar,
.netRow.fromBFCache .netResolvingBar,
.netRow.fromBFCache .netConnectingBar,
.netRow.fromBFCache .netSendingBar,
.netRow.fromBFCache .netWaitingBar,
.netRow.fromBFCache .netReceivingBar {
    opacity: 0.5;
}

.netRow.fromBFCache .netHrefLabel {
    opacity: 1.0;
    color: gray;
}

/************************************************************************************************/
/* Time Info tip */

.timeInfoTip {
    width: 200px; 
    height: 40px
}

.timeInfoTipStartLabel {
    padding-left: 5px;
    color: gray;
}

.timeInfoTipSeparator {
    padding-top: 10px;
    color: gray;
}

.timeInfoTipSeparator span {
    white-space:pre-wrap;
}

.timeInfoTipBar,
.timeInfoTipEventBar {
    position: relative;
    display: block;
    margin: 0;
    opacity: 1;
    height: 15px;
    width: 4px;
}

.timeInfoTipEventBar {
    width: 1px !important;
}

.timeInfoTipCell.startTime {
    padding-right: 8px;
}

.timeInfoTipCell.elapsedTime {
    text-align: right;
    padding-right: 8px;
}

/************************************************************************************************/
/* Size Info tip */

.sizeInfoLabelCol {
    font-weight: bold;
    padding-right: 10px;
    font-family: Lucida Grande, Tahoma, sans-serif;
    font-size: 11px;
}

.sizeInfoSizeCol {
    font-weight: bold;
}

.sizeInfoDetailCol {
    color: gray;
    text-align: right;
}

.sizeInfoDescCol {
    color: gray;
}

/************************************************************************************************/
/* Summary */

.netSummaryRow .netTimeBar {
    background: #BBBBBB;
    border: none;
    display: inline-block;
}

.netSummaryLabel {
    color: #222222;
}

.netSummaryRow {
    background: #BBBBBB !important;
    font-weight: bold;
}

.netSummaryRow .netBar {
    border-right-color: #BBBBBB;
}

.netSummaryRow > .netCol {
    border-top: 1px solid #999999;
    border-bottom: 2px solid;
    -moz-border-bottom-colors: #EFEFEF #999999;
    padding-top: 1px;
    padding-bottom: 2px;
}

.netSummaryRow > .netHrefCol:hover {
    background: transparent !important;
}

.netCountLabel {
    padding-left: 18px;
}

.netTotalSizeCol {
    text-align: right;
}

.netTotalTimeCol {
    text-align: right;
}

.netCacheSizeLabel {
    display: inline-block;
    float: left;
}

.netCacheSizeLabel[collapsed="true"] {
    display: none !important;
}

.netTotalTimeLabel {
    padding-right: 6px;
}

/************************************************************************************************/

.netLimitRow {
    background: rgb(255, 255, 225) !important;
    font-weight:normal;
    color: black;
    font-weight:normal;
}

.netLimitLabel {
    padding-left: 18px;
}

.netLimitRow > .netCol {
    border-bottom: 2px solid;
    -moz-border-bottom-colors: #EFEFEF #999999;
    vertical-align: middle !important;
    padding-top: 2px;
    padding-bottom: 2px;
}

.netLimitButton {
    font-size: 11px;
    padding-top: 1px;
    padding-bottom: 1px;
}
/* ... */

